# MASFactory

./: .gitignore  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
applications/: number_off_demo.py
applications/agentverse/: README.md  formatters.py  utils.py
applications/agentverse/components/: agentverse_brainstorming_decision.py  agentverse_central_decision.py  agentverse_chat_history.py  agentverse_concurrent_decision.py  agentverse_horizontal_decision.py  agentverse_vertical_decision.py  agentverse_vertical_solver_first.py
applications/camel/: README.md  __init__.py  camel_formatter.py  conversation_loop.py  main.py  prompts.py  result_writer.py  workflow.py
applications/chatdev/: README.md
applications/chatdev_lite/: README.md
applications/chatdev_lite_vibegraph/: README.md  main.py  tools.py  workflow.py
applications/hugggpt2/: README.md  __init__.py  config.yaml  main.py  prompts.py  result_writer.py  workflow.py
applications/metagpt/: README.md
applications/vibegraph_demo/: README.md  main.py
docs/: package-lock.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.js  (+1 more)
docs/src/: api_reference.md  index.md
masfactory/: __init__.py
masfactory-visualizer/: .gitignore  .npmignore  .vscodeignore  README.md  package-lock.json  package.json  test_tree_sitter.js
masfactory-visualizer/scripts/: forceSyncStdio.cjs
masfactory-visualizer/src/: extension.ts
masfactory-visualizer/webview-ui/: index.html  package.json  tsconfig.app.json  vite.config.ts
masfactory/core/: node_template.py
(+301 files in other folders)
